# WorkHorse

./: README.md  _version.py  pyproject.toml
src/workhorse/: __init__.py  main.py
src/workhorse/filename_adjuster/: filename_adjuster.py
src/workhorse/gui/: __init__.py  archive_page.py  main_menu.py  name_structure.py  rename_page.py
src/workhorse/meta_functions/: app_start_up.py  directory_copier.py  directory_selector.ipynb  directory_selector.py  name_replacer.py  name_structure.ipynb  name_structure.py  testing.py
src/workhorse/project_archiver/: project_archiver.py
src/workhorse/slidename_generator/: slidename_generator.py
