[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "workhorse"
description = ""

authors = [{name = "MF"}]
maintainers = [{name = "Michael Fotheringham", email = "16mrf6@queensu.ca"}]

dynamic = ["version"]

# license = {file = "LICENSE"}
readme = "README.md"

dependencies = [
    "pandas",
    "os",
    "customtkinter"
]

[project.optional-dependencies]
docs = [
    "ipykernel",
    "nbsphinx",
    "pandoc",
    "py2puml",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinxcontrib-plantuml",
    "sphinx-autoapi>=3.2",
    "sphinx-autodoc-typehints",
    "sphinx-design",
]
test = [
    "black",
    "flake8",
    "pylint",
    "pytest",
    "pylint-pytest",
]

[tool.black]
line-length = 80

[tool.hatch.build.targets.wheel]
packages = ["src/workhorse"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata]
allow-direct-references = true